working: technical notes, workforce profile, python viz, font size

--- a/Education, Workforce, and Regional Talent.html
+++ b/Education, Workforce, and Regional Talent.html
@@ -239,30 +239,57 @@
                         <p>
                           <strong>Educational Awards</strong>
                         </p>
+
+                        <p>
+                          A good way to keep a pulse on the regional pipeline that is more current than the picture you get from Census
+                          Educational Attainment data is to examine Educational Awards data. The National Center for Education Statistics
+                          is the national reporting body for public and private institutions nationwide.
+                        </p>
+
+                        <p>
+                          You are able to obtain a huge amount of information from this agency, including certification awards. These are a good
+                          tool for getting people qualified and connected to jobs more quickly and cheaply than four year degrees; appropriate for many jobs
+                          in manufacturing, cosmetology, and healthcare. However, the main institutions providing these awards in the Middle Tennessee Region,
+                           the Tennessee Colleges of Applied Technology (TCATs), have various different campuses across counties. The NCES data does not allow
+                           the viewer to see <em>where</em> these certificates are being awarded, which can affect the efficacy of industry development in the region.
+                           The Tennessee Bureau of Regents has supplied GNRC with campus-specific data. The organization standardized their reporting system only this past year, so
+                           currently there is only one year of data available broken out by campus. A small visualization can be found below, however a more
+                           immersive one is linked at the bottom of this section.
+                         </p>
+                        <div>
+                          <div class='tableauPlaceholder' id='viz1633727422590' style='position: relative'><noscript><a href='#'><img alt='EmbedDash ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;TC&#47;TCATCertsCounty&#47;EmbedDash&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='TCATCertsCounty&#47;EmbedDash' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;TC&#47;TCATCertsCounty&#47;EmbedDash&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1633727422590');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='420px';vizElement.style.height='677px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='420px';vizElement.style.height='677px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
+                        <p>
+                          You'll see that the top certificates awarded by all TCAT campuses in the last academic year were: Practical and Vocational Nursing and Nursing Assistants (378 awards),
+                          Precision Metal Working (203 awards), Cosmetology (188 awards), and Vehicle Repair and Maintenance Technology (187 awards). These certificates are associated with different
+                          occupations providing a variety of wages and typical wrap-around services such as childcare and healthcare benefits. For an exploration of this go to our page exploring
+                          living wages here (*LINK*).
+
+                        <p>For a more immersive group of data visualizations about educational awards, go here: <a href="https://public.tableau.com/app/profile/joanna.mccall/viz/2020TCATCampuses/Dashboard1"<em>Certifications by TCAT Campuses</em></a>, where you will find a more
+                          in-depth visualization of the data visualized above including certification hierarchy and TCAT campus certification counts,
+                          <a href="https://public.tableau.com/app/profile/joanna.mccall/viz/EducationalAwardsinMiddleTennesseeCountiesAnnualBreakdowns/Dashboard1"<em>Educational Awards by Tennessee County Annual Breakdowns</em></a>, where you will find
+                          detailed exploratory visualizations of every award level, including certifications, by year for the past decade, and
+                          <a href="https://public.tableau.com/app/profile/joanna.mccall/viz/EducationalAwardsinMiddleTennesseeCountiesOverTime/Dashboard1"<em>Educational Awards in Tennessee Counties Over Time</em></a>, where you will find this same data set up for
+                          exploratory time-series analysis. The last two visualizations do have TCAT data, however all awards are associated with the parent campus rather than the actual campus location.
+                        </p>
+
                         <p>
                           <strong>Workforce Profile</strong>
                         </p>
 
-                        <a href="#!">
-                          <img class="img-fluid" src="assets/img/linegraph.jpg" alt="..." />
-                        </a>
-                        <span class="caption text-muted">
-                          We see the ratio rise steadily over the past year.
-                        </span>
+                        <p>
+                          Here we examine who it is that makes up our workforce; who is and isn't participating, who is moving here, and who may be held back from participation for various reasons.
+                        </p>
 
                         <p>
-                          There are a few highlights when we examine this most recent quarter's data:
-                           ____________________________
-                         </p>
-
-                        <p>For a more immersive group of data visualizations, go here: <a href="https://public.tableau.com/app/profile/joanna.mccall/viz/2020TCATCampuses/Dashboard1"<em>Certifications by TCAT Campuses</em></a>,
-                          <a href="https://public.tableau.com/app/profile/joanna.mccall/viz/EducationalAwardsinMiddleTennesseeCountiesAnnualBreakdowns/Dashboard1"<em>Educational Awards by Tennessee County Annual Breakdowns</em></a>, and
-                          <a href="https://public.tableau.com/app/profile/joanna.mccall/viz/EducationalAwardsinMiddleTennesseeCountiesOverTime/Dashboard1"<em>Educational Awards in Tennessee Counties Over Time</em></a>
+                          To begin with, we have an examination of American Community Survey 5-Year Estimates that break down labor force participation by race.
+                          Similar to the way we viewed educational attainment above, this is more of a demographic than a current trend. Economic and labor force data
+                          is produced more frequently by the Bureau of Labor Statistics than ACS data, often quarterly or monthly, but utilizing the ACS estimates
+                          allows us to confidently get a picture of who composes the regional workforce. In other sections we will use BLS and State Department of Labor
+                          and Workforce Development data to examine more recent trends.
                         </p>
 
-                        <p>To see the exploratory data analysis conducted by GNRC analysts, go
-                          here: ___(link to Github repository)
-                        </p>
+
                         <div>
                   <!-- Technical Notes Section-->
                         <h2 class="section-heading">Technical Notes</h2>
@@ -297,7 +324,13 @@
                         </p>
 
                         <p>
-                          There are other metrics that are used for calculating (topic). For example ___.
+                          At the State Level:
+                          <ul>
+                            <li><a href="https://data.tn.gov/t/Public/views/TennesseeProvidersforDemandOccupations/TennesseeProvidersforDemandOccupations?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link&:toolbar=yes&:embed=yes"<em> Tennessee Department of Labor and Workforce Development: Program providers for all demand occupations </em></a></li>
+                            <li><a href="https://www.tn.gov/apprenticeshiptn.html"<em> ApprenticeshipTN </em></a></li>
+                            <li><a href="https://www.tbr.edu/policy-strategy/data-and-research "<em> Tennessee Bureau of Regents, Office of Policy and Strategy’s data </em></a></li>
+                            <li><a href="https://www.tn.gov/education/career-and-technical-education/career-clusters.html" <em> Tennessee Department of Education – Career Clusters </em></a></li>
+
                         </p>
 
                         <p>
